apps/hermes-agent/overlays/nishir-tailnet/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hermes-agent
spec:
  gatewayClassName: hermes-agent
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: hermes-agent-i-shikanime-studio-tls
            group: ""
            kind: Secret
          - name: dashboard-automata-i-shikanime-studio-tls
            group: ""
            kind: Secret
