apps/hermes-agent/overlays/nishir-tailnet/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hermes-agent-redirect
spec:
  hostnames:
    - automata.i.shikanime.studio
    - nishir.i.shikanime.studio
    - automata-a2a.i.shikanime.studio
    - dashboard.automata.i.shikanime.studio
  parentRefs:
    - name: hermes-agent
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
