apps/hermes-agent/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hermes-agent
spec:
  hostnames:
    - automata.i.shikanime.studio
    - automata-a2a.i.shikanime.studio
    - automata-dashboard.i.shikanime.studio
    - nishir.i.shikanime.studio
  parentRefs:
    - name: hermes-agent
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hermes-agent
          port: api-server
    - hostname: automata-a2a.i.shikanime.studio
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hermes-agent
          port: a2a
    - hostname: automata-dashboard.i.shikanime.studio
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hermes-agent
          port: dashboard
